# Cognitive-Speech-TTS

ClientSDK/source/: TTSClientSDK.c  native-lib.c
ClientSDK/tests/TTSClientTest_android/app/: build.gradle
ClientSDK/tests/TTSClientTest_android/app/src/androidTest/java/com/microsoft/speech/ttsclienttest_android/: ExampleInstrumentedTest.java
ClientSDK/tests/TTSClientTest_android/app/src/main/: AndroidManifest.xml
ClientSDK/tests/TTSClientTest_android/app/src/main/res/layout/: activity_main.xml
ClientSDK/tests/TTSClientTest_android/app/src/main/res/values/: strings.xml
ClientSDK/tests/TTSClientTest_android/gradle/wrapper/: gradle-wrapper.properties
ClientSDK/tests/perfTest_Android/app/: CMakeLists.txt  build.gradle
ClientSDK/tests/perfTest_Android/app/src/androidTest/java/com/microsoft/speech/ttsclientsdk/: ExampleInstrumentedTest.java
ClientSDK/tests/perfTest_Android/app/src/main/: AndroidManifest.xml
ClientSDK/tests/perfTest_Android/app/src/main/cpp/: native-lib.c
ClientSDK/tests/perfTest_Android/app/src/main/cpp/include/: TTSClientSDK.h
ClientSDK/tests/perfTest_Android/app/src/main/cpp/src/: TTSClientSDK.c
ClientSDK/tests/perfTest_Android/app/src/main/java/com/microsoft/speech/ttsclientsdk/: ITTSCallback.java  MainActivity.java  Synthesizer.java
ClientSDK/tests/perfTest_Android/app/src/main/res/layout/: activity_main.xml
ClientSDK/tests/perfTest_Android/app/src/main/res/values/: strings.xml
ClientSDK/tests/perfTest_Android/gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
